--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>David's Website</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> -->
+        <link href="https://api.fontshare.com/v2/css?f[]=satoshi@700,500,301,300,401,400&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="styles.css">
+        <title>David's Website</title>
+    </head>
 <body>
-  <p>
-    Hello World!
-  </p>
+    <nav>
+        <div class="logo">
+            <a href="#">David Nong-Ang</a>
+        </div>
+        <div class="nav-links">
+            <a href="about.html">About</a>
+            <a href="projects.html">Projects</a>
+            <a href="contacts.html">Contacts</a>
+            <a href="resume.html">Resume/CV</a>
+        </div>
+    </nav>
+
+    <div class="main">
+        <img src="assets/ProfilePic.jpg">
+        <div class="info">
+            <h1>Hello, I'm David Nong-Ang. <br>Software Engineer</h1>
+            <p>Description about myself .........</p>
+            <button>Download Resume</button>
+        </div>
+    </div>
+
+
+
 </body>
 </html>
